Mengganti gambar di pendaftaran-mobile-responsive-template

--- a/detailpost.html
+++ b/detailpost.html
@@ -100,13 +100,13 @@
                 <div class="single-item">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img class="responsive-image no-bottom" src="images/pictures/1.jpg" alt="img">
+                            <img class="responsive-image no-bottom" src="images/pictures/1.png" alt="img">
                         </div>
                         <div class="swiper-slide">
-                            <img class="responsive-image no-bottom" src="images/pictures/2.jpg" alt="img">
+                            <img class="responsive-image no-bottom" src="images/pictures/2.png" alt="img">
                         </div>
                         <div class="swiper-slide">
-                            <img class="responsive-image no-bottom" src="images/pictures/3.jpg" alt="img">
+                            <img class="responsive-image no-bottom" src="images/pictures/3.png" alt="img">
                         </div>
                     </div>
                 </div>
